--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     "nuwave/lighthouse": "^6.54.0",
     "nyholm/psr7": "^1.8",
     "opis/json-schema": "^2.3.0",
-    "phpdocumentor/type-resolver": "^1.7",
+    "phpdocumentor/type-resolver": "^1.7|^2.0",
     "phpstan/phpdoc-parser": "^2.0.0",
     "phpstan/phpstan": "^2.1.1",
     "phpunit/phpunit": "^11.3.0|^12.0.0",
