--- a/packages/lara-asp-serializer/composer.json
+++ b/packages/lara-asp-serializer/composer.json
@@ -24,7 +24,7 @@
     "illuminate/database": "^12.0.1",
     "illuminate/support": "^12.0.1",
     "lastdragon-ru/lara-asp-core": "self.version",
-    "phpdocumentor/type-resolver": "^1.7",
+    "phpdocumentor/type-resolver": "^1.7|^2.0",
     "phpstan/phpdoc-parser": "^2.0.0",
     "symfony/polyfill-php84": "^1.31",
     "symfony/property-access": "^7.0.0",
